[tool.poetry]
name = "untitled"
version = "0.1.0"
description = ""
authors = ["TomZielundTR <tom.zielund@thomsonreuters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, !=3.9.7"
streamlit = "^1.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
